# somn-super-agent

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .markdownlinkcheck.json  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IDENTITY.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SOMN打通状态矩阵.md  SOUL.md  USER.md  _court_data.json  docker-compose.yml  download_gemma4_tokenizer.py  download_tokenizer_only.py  find_graph_usage.py  find_learn.py  frontend_backend_load_diagnosis.md  llm_unified_config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_tests.py  run_profile.bat  run_test.py  run_tests.bat  security_scan.py  (+2 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  TOPICS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pytest.yml  release.yml  stale.yml
Somn-GUI/: ARCHITECTURE.md  README_LAUNCHERS.md  pyproject.toml  requirements.txt  启动器.bat
Somn-GUI/config/: gui_config.yaml
Somn-GUI/plugins/example/: manifest.json  plugin.py
Somn-GUI/scripts/: verify_gui.py
Somn-GUI/somngui/: __init__.py
Somn-GUI/somngui/cache/: __init__.py  cache_db.py  cache_manager.py  chat_history.py
Somn-GUI/somngui/client/: __init__.py  api_client.py  websocket_client.py
Somn-GUI/somngui/core/: __init__.py  config.py  connection.py  plugin_manager.py  state.py
Somn-GUI/somngui/gui/: __init__.py  _types.py  _ui_templates.py  admin_panel.py  control_center_panel.py  main_window.py  system_resource_panel.py  tray_icon.py
Somn-GUI/somngui/resources/: Phase4完成报告.md  Phase5完成报告.md  __init__.py  dark.qss  forest_green.qss  light.qss  ocean_blue.qss  royal_purple.qss  联调报告.md
Somn-GUI/somngui/utils/: __init__.py  doc_export.py  file_ops.py
Somn-GUI/static/: somn-terminal.html
api/: __init__.py  deps.py  middleware.py  schemas.py  server.py  utils.py
api/routes/: __init__.py  admin.py  analysis.py  chat.py  health.py  knowledge.py  knowledge_cells.py  outputs.py
code_pilot/: __init__.py  codepilot.py  llm_config.py
config/: local_config.yaml  server_config.yaml  storage_config.yaml
data/cache/: global_wisdom_scheduler_config.json
data/imperial_library/: library_index.json
data/learning/: config.json
data/learning_plans/: lp_05a4adb9968b.json  lp_11b072c5a106.json  lp_1d98bfc9836a.json  lp_3086e35b8428.json  lp_3eccba941f50.json  lp_4361ca37b4f4.json  lp_44aa28f33a12.json  lp_57f33673b096.json  lp_5a329df6d81a.json  lp_5ff6a0952800.json  lp_68783859b65d.json  lp_72461cafb953.json  lp_7db3aee67d4e.json  lp_8fcc53cddcab.json  lp_a0ce6a9fc294.json  lp_ad05d5172bbb.json  lp_ae1c52354b84.json  lp_ae88a5189325.json  lp_cba2414802b5.json  lp_d3370fe786fc.json  lp_d50e4c294230.json
docs/: API_DOCUMENTATION_README.md  SOMN核心架构文档.md  _court_data.json  index.html  neural_memory_system_architecture.md  promotion-article.md  代码运行指南.md  核心_独立运行需求.docm  独立运行指南.md  系统架构文档_v6.2.0.md  项目清理扫描报告_20260429.md
docs/adr/: ADR-003_Claw_Subsystem.md  ADR-005_Memory_System.md  ADR-006_Wisdom_Schools.md  ADR-008_Court_System.md  ADR-009_Imperial_Library.md  ADR-010_Timeout_Guard.md  ADR-012_ROI_System.md  ADR-015_OpenClaw_Design.md  ADR-016_Emotion_Research.md  ADR-017_Path_Bootstrap.md  ADR-018_Research_Strategy.md  ADR-020_Security_Design.md  README.md
docs/source/: conf.py  contributing.rst  deployment.rst  developer_guide_cn.rst  installation.rst  introduction.rst  troubleshooting.rst
docs/项目进度/: p0_upgrade_v2_report.json
file/智慧文件/: 600贤者蒸馏_第10卷_科技集群.md  600贤者蒸馏_第16卷_科学家补遗.md  600贤者蒸馏_第1卷_上古至秦汉.md  600贤者蒸馏_第5卷_佛家集群.md  600贤者蒸馏_第7卷_纵横医家.md  600贤者蒸馏_第9卷_史学集群.md  Neuromathematics_of_Vision深度学习文档.md  (+414 more)
global_control_center/: __init__.py  __main__.py  dashboard.py
knowledge_cells/: A1.1_三层推理.md  A1.2_谬误检测.md  A1_逻辑判断.md  A2.1_25学派融合.md  A2.2_四级调度.md  A2_智慧模块.md  A3.1_超级推理引擎25.md  A3.2_超级推理引擎40.md  A3.3_超级推理引擎70.md  A4.1_太极阴阳决策.md  A4.2_神之架构决策.md  A6_五步主链并行化.md  A7_直觉记忆系统.md  A8_学习进化系统.md  B10_裂变增长.md  B11_互动率.md  B12_用户研究.md  B13_建议.md  B14_提出战略.md  B15_形势.md  B1_互联网用户增长.md  B1_增长运营.md  B2_直播运营.md  B3_私域运营.md  B4_策略运营.md  B5_会员运营.md  B5_数据运营.md  B6_内容运营.md  B7_地产策划.md  B7_电商运营.md  B8_广告投放.md  B9_直播间的.md  C2_数据运营.md  C3_内容营销.md  DIVINE_REASON_AB_TEST_REPORT.md  PAN_WISDOM_TREE_NAMING.md  PAN_WISDOM_TREE_VERIFICATION.md  README.md  WEB_INTEGRATION_FIX_REPORT.md  __init__.py  (+58 more)
scripts/: analyze_missing_positions.py  benchmark_performance.py  code_optimization_analyzer.py  delete_empty_dirs.py  extract_positions_from_json.py  extracted_positions.json  full_scan_and_import_test.py  handle_todo_comments.py  health_check.py  init_config.py  project_continue_optimization.py  project_slimdown_analyzer.py  project_slimdown_planner.py  recover_positions.py  refactor_court_positions.py  refactor_plan_generator.py  repair_test.py  startup_monitor.py  verify_lazy_loading.py  verify_main_chain.py
smart_office_assistant/: .env.example  .gitignore  SmartOffice.spec  __init__.py  config.yaml  generate_mengniu_ppt.js  generate_mengniu_v2.js  install.bat  main.py  main_chain_verification.py  neural_layout_optimization_verification.py  neural_layout_phase1to5_integration.py  neural_layout_verification.py  neural_layout_visualization.html  path_bootstrap.py  pytest.ini  requirements.txt  run.py  run_all_tests.py  setup.py  simple_test.py  somn_cli.py  start.bat  test_diagnosis_log.txt  test_export.json  test_full_load_report.json  test_neural_layout_integration.py  test_sage_ab_report.json  test_v31_final.txt  verify_p1_clusters.py  启动全维度深度学习.bat
somn/: CHANGELOG.md  IDENTITY.md  LICENSE  README.md  SECURITY.md  USER.md  __init__.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_independent.sh
tests/: conftest.py  test_claw_subsystem.py  test_core_engines.py  test_gui_logo.py  test_integration_apis.py  test_launcher_logo.py  test_scheduler_system.py  test_somn_description.py  test_utils.py  test_wisdom_dispatcher.py
(+4409 files in other folders)
