# Somn项目配置 - pyproject.toml
# 自动代码质量检查配置

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "somn"
version = "6.2.0"
description = "Somn智能助手 - 万维智能系统"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Somn Project", email = "marcwadehan@gmail.com"}
]
keywords = ["ai", "llm", "artificial-intelligence", "reasoning-engine", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    "pytest-pretty>=2.0.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "pydocstyle>=6.3.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "black>=24.0.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
    "types-python-dateutil>=2.8.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "bump2version>=1.0.0",
    "pre-commit>=3.6.0",
    "radon>=6.0.0",
    "xenon>=0.9.0",
    "vulture>=2.10.0",
]
gui = [
    "PyQt6>=6.5.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "python-docx>=1.0.0",
    "reportlab>=4.0.0",
    "websockets>=14.0",
]

# ============================================================
# PYLINT 配置 - 代码质量检查
# ============================================================
[pylint.master]
# 消息控制
jobs = 4                    # 并行检查
persistent = true            # 缓存结果
suggestion-mode = true       # 建议模式

# 排除目录
ignore-paths = [
    "^somn/smart_office_assistant/data/",
    "^somn/smart_office_assistant/tests/",
    "^somn/smart_office_assistant/__pycache__/",
    "^somn/smart_office_assistant/\\.git/",
    "^somn/smart_office_assistant/node_modules/",
]

# 忽略的消息类别
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-function-docstring",      # 文档可选
    "missing-class-docstring",         # 文档可选
    "missing-module-docstring",        # 文档可选
]

[pylint.messages_control]
# 启用的消息类型
enable = [
    "all",
]

[pylint.format]
# 格式配置
max-line-length = 120       # 行长度限制
indent-string = "    "      # 4空格缩进
indent-after-paren = 4

# ============================================================
# 代码复杂度阈值配置 (核心部分)
# ============================================================
[pylint.design]
# 圈复杂度阈值 (McCabe Complexity)
max-complexity = 15         # 函数最大圈复杂度
max-args = 8                # 函数最大参数个数
max-attributes = 12          # 类最大属性数
max-bool-expr = 5            # 布尔表达式最大操作数
max-branches = 15            # 最大分支数
max-locals = 20              # 函数最大局部变量数
max-parents = 7              # 最大父类继承数
max-public-methods = 25      # 类最大公开方法数
max-returns = 6              # 函数最大返回点
max-statements = 60          # 函数最大语句数

[pylint.refactoring]
# 重构建议
max-nested-blocks = 5        # 最大嵌套块数
never-returning-functions = ["sys.exit", "raise SystemExit"]

[pylint.classes]
# 类相关检查
assert-on-tuple = true
class-attribute-naming-format = "[A-Z_][A-Z0-9_]{2,30}$"
class-naming-format = "[A-Z][a-zA-Z0-9]+$"
const-naming-format = "[A-Z_][A-Z0-9_]{2,30}$"
method-naming-format = "[a-z][a-z0-9_]{2,30}$"
protected-access-format = "_%s"

[pylint.string]
# 字符串检查
check-quote-consistency = true
check-str-concat-over-line-jumps = true

[pylint.variables]
# 变量检查
allow-global-unused-variables = false
callbacks-names = ["_on_success", "_on_error", "_on_failure"]
ignore-on-opaque-installation = true

[pylint.typecheck]
# 类型检查
missing-member-hint = true
missing-member-hint-distance = 2
missing-member-max-choices = 3

[pylint.logging]
# 日志配置
logging-format-style = "old"
logging-modules = ["logging", "tqdm"]

# ============================================================
# FLAKE8 配置 - 风格检查
# ============================================================
[tool.flake8]
# 行长度和限制
max-line-length = 120
max-doc-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    "data",
    "node_modules",
    "tests",
]
ignore = [
    "E203",    # whitespace before ':'
    "E501",    # line too long (用pylint控制)
    "W503",    # line break before binary operator
]
per-file-ignores = [
    "__init__.py:F401,F403",  # 允许空导入
]
count = true                  # 显示错误计数
statistics = true             # 显示统计信息

# ============================================================
# BLACK 配置 - 代码格式化
# ============================================================
[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | data
  | node_modules
  | tests
)/
'''
include = '\.pyi?$'
extend-exclude = '''
/(
  # managed venv
  \.workbuddy
)/
'''

[tool.blackd]
# blackd服务器配置
bind-host = "127.0.0.1"
bind-port = 4545

# ============================================================
# ISORT 配置 - import排序
# ============================================================
[tool.isort]
profile = "black"
line_length = 120
skip = [
    ".git",
    ".venv",
    "__pycache__",
    "data",
    "node_modules",
    "tests",
]
known-first-party = ["smart_office_assistant"]
known-third-party = [
    "numpy",
    "pandas",
    "torch",
    "transformers",
    "requests",
    "yaml",
]
no-lines-before = ["LOCALFOLDER"]
lines-after-imports = 2

# ============================================================
# MYPY 配置 - 静态类型检查
# ============================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false       # 宽松模式
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = false

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "torch.*",
    "transformers.*",
    "yaml.*",
]
ignore_missing_imports = true

# ============================================================
# RADON 配置 - 复杂度指标
# ============================================================
[tool.radon]
exclude = [
    "data",
    "tests",
    "__pycache__",
    "node_modules",
]
ignore = ["__init__.py", "__main__.py"]

# ============================================================
# BANDIT 配置 - 安全检查
# ============================================================
[tool.bandit]
exclude = [
    "tests",
    "data",
    ".git",
]
skips = [
    "B101",    # assert_used (测试中常用)
    "B404",    # subprocess
    "B603",    # subprocess without shell
]

# ============================================================
# PYTEST 配置 - 测试框架（见 tests/pytest_config.ini）
# 注意: pytest 配置独立存放以避免 toml 解析兼容性问题
# ============================================================
